# dxfeed-graal-native-sdk

./: .editorconfig  .gitignore  ConvertTapeFile.in  README.MD  README.md  ReleaseNotes.md  ipf.txt  merge-json-files.ps1  merge-ser-json-files.ps1  pom.xml  rc.cmd  reflection-config.json  resource-config.json  run-with-agent.ps1  version.rc
.github/workflows/: build.yml
.teamcity/: README.MD  graalvm-linux-aarch64.Dockerfile  graalvm-linux-x64.Dockerfile  graalvm-win-x64-v2.Dockerfile  graalvm-win-x64.Dockerfile  install.ps1  install.sh  nuget.Dockerfile  pom.xml  preparing-agents.MD  settings.kts  settings.xml
.teamcity/patches/buildTypes/: BuildAndDeployForLinuxAarch64WindowsAndMacOS.kts  BuildForLinuxAarch64.kts
NuGet/: DxFeed.Graal.Native.nuspec
NuGet/buildTransitive/net461/: DxFeed.Graal.Native.targets
c-project/: CMakeLists.txt  graalvm_test_native.h
jre-ios/: Add_XCode_project_to_build_JDK_for_iOS_and_iOS-simulator.patch  README.MD  fix_build_basing_on_(https___stackoverflow_com_questions_72336864_how-to-compile-openjdk-1.patch  fix_problems_with_undefined_symbol_Java_com_sun_management_internal_OperatingSystemImpl_in.patch  iOS_build.patch  patch_and_xcode_projects_for_22_0_1+8-jvmci-b01.patch  xcode_project_for_GraalVM.patch
scripts/: agent-macbuilder10.sh
src/assembly/: assembly-dir.xml  assembly.xml  component.xml  src.xml
src/main/c/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.cmd  build.sh  dxf_graal_endpoint.h  dxf_graal_error_codes.h  dxf_graal_events.h  dxf_graal_system.h  dxf_graal_utils.h  dxf_types.h  dxfg_endpoint.h  dxfg_error_codes.h  dxfg_events.h  dxfg_subscription.h  graal_isolate.h  graal_isolate_dynamic.h
src/main/c/.run/: DxfgClient.run.xml  NativeLibMain.run.xml
src/main/c/api/: CMakeLists-static.txt  CMakeLists.txt  dxfg_api.h  dxfg_candlewebservice.h  dxfg_catch_exception.h  dxfg_common.h  dxfg_endpoint.h  dxfg_error_codes.h  dxfg_event_model.h  dxfg_events.h  dxfg_feed.h  dxfg_glossary.h  dxfg_indexed_event_tx_model.h  dxfg_ipf.h  dxfg_javac.h  dxfg_logging.h  dxfg_ondemand.h  dxfg_orcs.h  dxfg_order_book_model.h  dxfg_publisher.h  dxfg_qds.h  dxfg_schedule.h  dxfg_subscription.h  dxfg_subscription_controller.h  dxfg_system.h  dxfg_utils.h
src/main/c/cmake/: CompileOptions.cmake  Custom.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
src/main/c/src/apps/: CMakeLists.txt
src/main/c/src/apps/DxfgClient/: AdditionalUnderlyingsCase.hpp  CMakeLists.txt  CfiCase.hpp  CommandLineParser.cpp  CommandLineParser.hpp  CommandsContext.cpp  CommandsContext.hpp  CommandsRegistry.cpp  CommandsRegistry.hpp  Common.cpp  Common.hpp  DxEndpointMonitoringCase.hpp  DxEndpointSubscriptionCase.hpp  DxEndpointTimeSeriesSubscriptionCase.hpp  DxLinkCase.hpp  ExceptionCase.hpp  ExecutorBaseOnConcurrentLinkedQueueCase.hpp  FinalizeListenerCase.hpp  GetLastEventCase.hpp  HistoryEndpointCase.hpp  IndexedEventModelCase.hpp  IndexedEventTxModelCase.hpp  IndexedEventsPromiseCase.hpp  InstrumentProfileCustomFieldsCase.hpp  InstrumentProfileFieldCase.hpp  InstrumentProfileReaderBench.hpp  LastEventIfSubscribedCase.hpp  LiveIpfCase.hpp  LoggingCase.hpp  OnDemandServiceCase.hpp  OrcsCase.hpp  OrderBookModelCase.hpp  PriceIncrementsCase.hpp  PromiseCase.hpp  PromisesAllOfCase.hpp  ReaderIpfCase.hpp  ScheduleCase.hpp  SystemPropertiesCase.hpp  TxIndexedEventModelCase.hpp  main.cpp
src/main/c/src/libs/: CMakeLists.txt
src/main/c/src/libs/DxfgEventFormatter/: CMakeLists.txt
src/main/c/src/libs/DxfgEventFormatter/include/DxfgEventFormatter/: QuoteFormatter.hpp  TimeAndSaleFormatter.hpp
src/main/c/src/libs/DxfgEventFormatter/src/: QuoteFormatter.cpp  TimeAndSaleFormatter.cpp
src/main/c/src/libs/DxfgUtils/: CMakeLists.txt
src/main/c/src/libs/DxfgUtils/include/DxfgUtils/: BitUtils.hpp  StringUtils.hpp
src/main/c/src/libs/DxfgUtils/src/: StringUtils.cpp
src/main/c/src/libs/Utils/: CMakeLists.txt
src/main/c/src/libs/Utils/include/Utils/: EventFormatter.hpp  StringUtils.hpp
src/main/c/src/libs/Utils/src/: EventFormatter.cpp  StringUtils.cpp
src/main/c/tests/: CMakeLists.txt
src/main/c/tests/SystemNativeTest/: CMakeLists.txt  main.cpp
src/main/java/com.dxfeed/: NativeLibApi.java  NativeLibMain.java
src/main/java/com.dxfeed/mapper/: BaseEventNativeMapper.java  ListEventMapper.java  ListNativeMapper.java  NativeMapper.java  QuotaNativeMapper.java  TimeAndSaleNativeMapper.java
src/main/java/com/devexperts/logging/: InterceptableLogging.java  InterceptableLoggingListener.java
src/main/java/com/dxfeed/api/: BaseNative.java  EndpointNative.java  ErrorNative.java  Mapper.java  NativeUtils.java  SubscriptionNative.java  SystemNative.java  UtilsNative.java  package-info.java
src/main/java/com/dxfeed/api/endpoint/: Directives.java  DxfgEndpoint.java  DxfgEndpointBuilder.java  DxfgEndpointPropertyChangeListener.java  DxfgEndpointRole.java  DxfgEndpointState.java  DxfgEndpointStateChangeListener.java  DxfgEndpointStateChangeListenerFunc.java  DxfgEndpointStateChangeListenerFunction.java  DxfgExecuter.java  DxfgStateChangeListener.java  DxfgStateChangeListenerFunction.java  EndpointBuilderNative.java  EndpointNative.java  package-info.java
src/main/java/com/dxfeed/api/events/: BaseSymbol.java  Directives.java  DxfgAnalyticOrder.java  DxfgCCharPointerPointer.java  DxfgCandle.java  DxfgCandleAlignment.java  DxfgCandleExchange.java  DxfgCandlePeriod.java  DxfgCandlePrice.java  DxfgCandlePriceLevel.java  DxfgCandleSession.java  DxfgOrder.java  (+46 more)
src/main/java/com/dxfeed/event/: EventMapper.java  EventMappers.java  ListEventMapper.java  ListEventTypeMapper.java  ListIndexedEventSourceMapper.java
src/main/java/com/dxfeed/ipf/: InstrumentProfileCustomFields.java
src/main/java/com/dxfeed/mapper/: BaseEventNativeMapper.java  ListEventMapper.java  ListNativeMapper.java  NativeMapper.java  QuoteNativeMapper.java
src/main/java/com/dxfeed/sdk/: NativeUtils.java  package-info.java
src/test/java/: NativeLibMain.java
src/test/java/com/dxfeed/: NativeLibMain.java  TestJmx.java
src/test/resources/: tape.csv
(+622 files in other folders)
